--- a/src/interface/ui/main_window.ui
+++ b/src/interface/ui/main_window.ui
@@ -86,6 +86,8 @@
    <addaction name="_new_image_action"/>
    <addaction name="separator"/>
    <addaction name="_preferences_action"/>
+   <addaction name="separator"/>
+   <addaction name="_recorder_action"/>
   </widget>
   <action name="_add_backend_action">
    <property name="icon">
@@ -147,6 +149,21 @@
   <action name="actionLoad_Settings">
    <property name="text">
     <string>Load Settings</string>
+   </property>
+  </action>
+  <action name="_recorder_action">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../images/resources.qrc">
+     <normaloff>:/svg_icons/recorder_red.svg</normaloff>:/svg_icons/recorder_red.svg</iconset>
+   </property>
+   <property name="text">
+    <string>Recorder</string>
+   </property>
+   <property name="toolTip">
+    <string>Recorder On/Off</string>
    </property>
   </action>
  </widget>
@@ -274,6 +291,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>_recorder_action</sender>
+   <signal>triggered(bool)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>_recorder_toggled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>302</x>
+     <y>244</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>_add_backend_triggered()</slot>
@@ -282,5 +315,6 @@
   <slot>_preferences_clicked()</slot>
   <slot>_on_save_settings_triggered()</slot>
   <slot>_on_load_settings_triggered()</slot>
+  <slot>_recorder_toggled(bool)</slot>
  </slots>
 </ui>
